register route complete
